SignUp ok, les informations sont maintenant captees correctement. CSS views signIn signUp modifies, margin-top 0px, pour que le formulaire soit visible et pas manges par le haut de l'ecran. (a voir si les supprimer ne reviendrait pas au meme).

--- a/css/signIn.css
+++ b/css/signIn.css
@@ -10,7 +10,7 @@
   border: solid;
   border-radius: 20px;
   padding: 30px;
-  margin-top: -40px;
+  margin-top: 0px;
   padding-bottom: 10px;
 }
 
