--- a/css/signUp.css
+++ b/css/signUp.css
@@ -11,7 +11,7 @@
   border-radius: 20px;
   padding: 30px;
   padding-bottom: 10px;
-  margin-top: -100px;
+  margin-top: 0px;
   margin-left: -110px;
 }
 
